--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,254 +1,251 @@
-
-submodule :
-
-  wTools :
-    path : npm:///wTools
-    enabled : 0 # submodule
-  wCopyable :
-    path : npm:///wCopyable
-    enabled : 0 # submodule
-  wMathScalar :
-    path : npm:///wmathscalar
-    enabled : 0 # submodule
-  wMathVector :
-    path : npm:///wmathvector
-    enabled : 0 # submodule
-  wmathmatrix :
-    path : hd://.
-    enabled : 0 # submodule
-    criterion :
-      development : 1
-  wentitybasic :
-    path : npm:///wentitybasic
-    enabled : 0 # submodule
-  wTesting :
-    path : npm:///wTesting
-    enabled : 0 # submodule
-    criterion :
-      development : 1
-  eslint :
-    path : npm:///eslint
-    enabled : 0 # submodule
-    criterion :
-      development : 1
-
-path :
-
-  in : '.'
-  out : 'out'
-  temp :
+submodule:
+  wTools:
+    path: 'npm:///wTools'
+    enabled: 0
+  wCopyable:
+    path: 'npm:///wCopyable'
+    enabled: 0
+  wMathScalar:
+    path: 'npm:///wmathscalar'
+    enabled: 0
+  wMathVector:
+    path: 'npm:///wmathvector'
+    enabled: 0
+  wmathmatrix:
+    path: 'hd://.'
+    enabled: 0
+    criterion:
+      development: 1
+  wentitybasic:
+    path: 'npm:///wentitybasic'
+    enabled: 0
+  wTesting:
+    path: 'npm:///wTesting'
+    enabled: 0
+    criterion:
+      development: 1
+  eslint:
+    path: 'npm:///eslint'
+    enabled: 0
+    criterion:
+      development: 1
+path:
+  in: .
+  out: out
+  temp:
     - 'path::out'
-    - 'package-lock.json'
-    - 'package.json'
-    - 'node_modules'
-  proto : './proto'
-  export : '{path::proto}/**'
-  doc : './doc'
-
-  out.raw.debug :
-    path : '{path::out}/debug'
-    criterion :
-      debug : debug
-      raw : raw
-      content : prime
-  out.compiled.debug :
-    path : '{path::out}/compiled.debug'
-    criterion :
-      debug : debug
-      raw : compiled
-      content : prime
-  out.raw.release :
-    path : '{path::out}/raw.release'
-    criterion :
-      debug : release
-      raw : raw
-      content : prime
-  out.compiled.release :
-    path : '{path::out}/release'
-    criterion :
-      debug : release
-      raw : compiled
-      content : prime
-
-  entry.proto.no.tests :
-    path : proto/wtools/amath/l5_matrix/module/full/Include.s
-    criterion :
-      tests : 'no.tests'
-  entry.proto.only.tests :
-    path : proto/**/*.test.s
-    criterion :
-      tests : 'only.tests'
-
-  # npm.entry : proto/wtools/abase/Layer2.s
-  # npm.files : proto
-
-  entry.out.raw.debug :
-    path : '{path::out.*=1}/source/wtools/amath/l5_matrix/Include.s'
-    criterion :
-      debug : [ debug, release ]
-      raw : raw
-      content : prime
-  entry.out.compiled.debug :
-    path : '{path::out.*=}/source/Index.s'
-    criterion :
-      debug : [ debug, release ]
-      raw : compiled
-      content : prime
-
-reflector :
-
-  reflect.proto :
-    inherit : predefined.*
-    criterion :
-      tests : 'no.tests'
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-      content : prime
-    filePath :
-      path::proto : '{path::out.*=1}/source'
-
-  transpile.proto.raw :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.no.tests
-    criterion :
-      raw : raw
-      debug : release
-      content : prime
-    filePath :
-      path::proto : '{path::out.raw.release}'
-
-  transpile.proto.no.tests.compiled :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.*=1
-    criterion :
-      tests : 'no.tests'
-      raw : compiled
-      debug : [ debug, release ]
-      content : prime
-    filePath :
-      '**.test*' : 0
-      '**.test/**' : 0
-      path::proto : '{path::out.*=1}/Main.s'
-
-  transpile.proto.only.tests.compiled :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.*=1
-      external.before : '{path::out.*=1}/Main.s'
-    criterion :
-      tests : 'only.tests'
-      raw : compiled
-      debug : [ debug, release ]
-      content : prime
-    filePath :
-      '**.test*' : 1
-      path::proto : '{path::out.*=1}/Tests.test.s'
-
-step :
-
-  npm.generate :
-    inherit : npm.generate
-    entryPath : path::entry.out.*=1
-    packagePath : '{path::out.*=1}/package.json'
-    filesPath : '{path::out.*=1}/source/**'
-    criterion :
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-
-  clean.out :
-    inherit : files.delete
-    filePath : '{path::out.*=1}/source'
-    criterion :
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-      tests : [ 'no.tests', 'only.tests' ]
-      content : [ 'prime', 'npm' ]
-
-  clean.out.npm :
-    inherit : files.delete
-    filePath : path::out.*=1
-    criterion :
-      debug : debug
-      raw : compiled
-      tests : no.tests
-      content : npm
-
-  tst.proto :
-    shell : 'tst {path::proto}'
-    criterion :
-      content : proto
-
-  tst.debug :
-    shell : 'tst {path::out.*=1}'
-    criterion :
-      content : prime
-      debug : debug
-
-  tst.release :
-    shell : 'tst {path::out.*=1}'
-    criterion :
-      content : prime
-      debug : release
-
-build :
-
-  debug :
-    criterion :
-      default : 1
-      debug : debug
-      raw : raw
-      content : prime
-    steps :
-      - step::clean.out*=2
+    - package-lock.json
+    - package.json
+    - node_modules
+  proto: ./proto
+  export: '{path::proto}/**'
+  doc: ./doc
+  out.raw.debug:
+    path: '{path::out}/debug'
+    criterion:
+      debug: debug
+      raw: raw
+      content: prime
+  out.compiled.debug:
+    path: '{path::out}/compiled.debug'
+    criterion:
+      debug: debug
+      raw: compiled
+      content: prime
+  out.raw.release:
+    path: '{path::out}/raw.release'
+    criterion:
+      debug: release
+      raw: raw
+      content: prime
+  out.compiled.release:
+    path: '{path::out}/release'
+    criterion:
+      debug: release
+      raw: compiled
+      content: prime
+  entry.proto.no.tests:
+    path: proto/wtools/amath/l5_matrix/module/full/Include.s
+    criterion:
+      tests: no.tests
+  entry.proto.only.tests:
+    path: proto/**/*.test.s
+    criterion:
+      tests: only.tests
+  entry.out.raw.debug:
+    path: '{path::out.*=1}/source/wtools/amath/l5_matrix/Include.s'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw: raw
+      content: prime
+  entry.out.compiled.debug:
+    path: '{path::out.*=}/source/Index.s'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw: compiled
+      content: prime
+  npm.proto.entry:
+    - /pro/module/wMathMatrix/proto/wtools/amath/l5_matrix/module/full/Include.s
+    - /pro/module/wMathMatrix/proto/node_modules/wmathmatrix
+reflector:
+  reflect.proto:
+    inherit: predefined.*
+    criterion:
+      tests: no.tests
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+      content: prime
+    filePath:
+      'path::proto': '{path::out.*=1}/source'
+  transpile.proto.raw:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.no.tests'
+    criterion:
+      raw: raw
+      debug: release
+      content: prime
+    filePath:
+      'path::proto': '{path::out.raw.release}'
+  transpile.proto.no.tests.compiled:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.*=1'
+    criterion:
+      tests: no.tests
+      raw: compiled
+      debug:
+        - debug
+        - release
+      content: prime
+    filePath:
+      '**.test*': 0
+      '**.test/**': 0
+      'path::proto': '{path::out.*=1}/Main.s'
+  transpile.proto.only.tests.compiled:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.*=1'
+      external.before: '{path::out.*=1}/Main.s'
+    criterion:
+      tests: only.tests
+      raw: compiled
+      debug:
+        - debug
+        - release
+      content: prime
+    filePath:
+      '**.test*': 1
+      'path::proto': '{path::out.*=1}/Tests.test.s'
+step:
+  npm.generate:
+    inherit: npm.generate
+    entryPath: 'path::entry.out.*=1'
+    packagePath: '{path::out.*=1}/package.json'
+    filesPath: '{path::out.*=1}/source/**'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+  clean.out:
+    inherit: files.delete
+    filePath: '{path::out.*=1}/source'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+      tests:
+        - no.tests
+        - only.tests
+      content:
+        - prime
+        - npm
+  clean.out.npm:
+    inherit: files.delete
+    filePath: 'path::out.*=1'
+    criterion:
+      debug: debug
+      raw: compiled
+      tests: no.tests
+      content: npm
+  tst.proto:
+    shell: 'tst {path::proto}'
+    criterion:
+      content: proto
+  tst.debug:
+    shell: 'tst {path::out.*=1}'
+    criterion:
+      content: prime
+      debug: debug
+  tst.release:
+    shell: 'tst {path::out.*=1}'
+    criterion:
+      content: prime
+      debug: release
+build:
+  debug:
+    criterion:
+      default: 1
+      debug: debug
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - reflect.proto.*=1
-
-  compiled.debug :
-    criterion :
-      debug : debug
-      raw : compiled
-      content : prime
-    steps :
-      - step::clean.out*=2
+  compiled.debug:
+    criterion:
+      debug: debug
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.no.tests*=1
       - transpile.proto.only.tests*=1
-
-  raw.release :
-    criterion :
-      debug : release
-      raw : raw
-      content : prime
-    steps :
-      - step::clean.out*=2
+  raw.release:
+    criterion:
+      debug: release
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.raw
-
-  release :
-    criterion :
-      debug : release
-      raw : compiled
-      content : prime
-    steps :
-      - step::clean.out*=2
+  release:
+    criterion:
+      debug: release
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.no.tests*=1
       - transpile.proto.only.tests*=1
-
-  npm :
-    criterion :
-      debug : debug
-      raw : raw
-      content : npm
-    steps :
+  npm:
+    criterion:
+      debug: debug
+      raw: raw
+      content: npm
+    steps:
       - npm.generate.*=1
-      # - npm.generate
-
-  all :
-    steps :
-      - build::debug
-      - build::compiled.debug
-      - build::raw.release
-      - build::release
-      - build::npm
+  all:
+    steps:
+      - 'build::debug'
+      - 'build::compiled.debug'
+      - 'build::raw.release'
+      - 'build::release'
+      - 'build::npm'
