--- a/will.yml
+++ b/will.yml
@@ -18,7 +18,7 @@ about:
   enabled: 1
   license: MIT
   npm.name: wmathmatrix
-  author: Kostiantyn Wandalen <wanalen@01.school>
+  author: Kostiantyn Wandalen <wandalen@obox.systems>
   keywords:
     - wTools
     - math
@@ -26,7 +26,7 @@ about:
     - matrix math
     - convolution
   contributors:
-    - Kostiantyn Wandalen <wanalen@01.school>
+    - Kostiantyn Wandalen <wandalen@obox.systems>
     - Pablo Garcimartin <pablogarcimartinruiz@gmail.com>
   interpreters:
     - njs >= 10.0.0
